# GDShare

./: CMakeLists.txt  mod.json
.github/workflows/: release.yml
src/: main.cpp
